height value set for imgPreview Div. Vertical overflow fixed

--- a/client/src/routes/Display/DragBoard/DragBoard.css
+++ b/client/src/routes/Display/DragBoard/DragBoard.css
@@ -43,4 +43,5 @@
 
 .imgContainer {
 	overflow: auto;
+	height: 400px;
 }
